Update index, add projects

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </span>
     <div id="myMenu" class="menu">
         <a href="javascript:void(0)" class="close-button" onclick="closeNav()">&times;</a>
-        <a href="WebPage.php">Home</a>
-        <a href="projects.php">Projects</a>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
     </div>
     <div id="myOverlay" class="overlay"></div>
     <header id="myHeader">
