Fixed video size

--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 </div>
 <div id="myOverlay" class="overlay"></div>
     <header id="myHeader">
-        <h1>MilesZiemer~$/Projects</h1>
+        <h1>MilesZiemer~/Projects</h1>
     </header>
     <h2 class="page-header">
         <span class="page-header-title">Projects</span>
@@ -25,12 +25,12 @@
     </h2>
     <div class="page-content">
         <h class="page-about">HowManyPills App (Summer 2019)</h>
-        <video src="Pills%202020-01-22%2023-27-43.mp4" type="video/mp4" controls></video>
+        <video src="Pills%202020-01-22%2023-27-43.mp4" type="video/mp4" controls class="page-video"></video>
         <p class="page-info">
             This desktop app was created to give patients who have been perscribed narcotic pills an idea of how many pills people with their similar bmi and age took. I originally coded this in Visual Basic, but put it into C#, believing C# would be more of a learning experience, and would prove more useful in the future. This program uses data from lower extremity surgeries performed at the Anne Arundel Medical Center, and was presented to some of the staff, who implemented the idea into the framework they already used to track perscriptions.
         </p>
         <h class="page-about">Aim Videogame (December 2019-)</h>
-        <video src="FPSProject%20%5BDebugGame%5D%20-%20Unreal%20Editor%202020-01-23%2020-41-48.mp4" type="video/mp4" controls></video>
+        <video src="FPSProject%20%5BDebugGame%5D%20-%20Unreal%20Editor%202020-01-23%2020-41-48.mp4" type="video/mp4" controls class="page-video"></video>
         <p class="page-info">
             This is a demo of the game I am currently developing using the Unreal Engine. Almost all development was done in C++, with slight useage of their Blueprint framework. The game is intended to assist players using a controller improve their aim in first person shooters. The target jumps all around the player, simulating real game situations that may require a player to "flick" and fire. Currently being developed are indicators to assist the player in finding the target if it is out of the field of view and improved player meshes, as well as a timer, score tracker, and start/end game menus.
             I started this game in C#, building off of what I learned with the HowManyPills app, but soon realized I needed a more robust platform, and switched to UE4 in December 2019.
