Added pic of me

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p class="page-about">
             About Me <br> Miles Ziemer <br> Computer Engineering <br> University of South Carolina <br> Graduating Spring 2021
         </p>
-        <div></div>
+        <img src="ProfessionalPic.jpg" alt="Pic" class="page-pic">
         <p class="page-info">
             Welcome to my personal website. Here you can find information about me, links to my resume, as well as demos of my projects. <br> <br>I am always looking to learn, which is why I invested so much time teaching myself new things. making this website, and both projects displayed on it are personal projects I did for enjoyment and the learning experience. This is why I am currently looking for an internship with a tech or engineering company that will build off of what I have learned in college about programming and working in a team, as well as teach me various new applications for my knowledge, and push me to excel professionally.<br><br>
         </p>
