--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,16 @@
             This is a demo of the game I am currently developing using the Unreal Engine. Almost all development was done in C++, with slight useage of their Blueprint framework. The game is intended to assist players using a controller improve their aim in first person shooters. The target jumps all around the player, simulating real game situations that may require a player to "flick" and fire. Currently being developed are indicators to assist the player in finding the target if it is out of the field of view (the left and right indicators are a debug form of this) and improved player meshes, as well as a timer, score tracker (also kept track of, not fully implemented), and start/end game menus.
             I started this game in C#, building off of what I learned with the HowManyPills app, but soon realized I needed a more robust platform, and switched to UE4 in December 2019.
         </p>
+        <h class="page-about">Roomba Programming (Fall 2019)</h>
+        <video src="IMG_1549.MOV" type="video/MOV" controls class="page-video"></video>
+        <p class="page-info">
+            This is a demonstration of a project I worked on for my robotics class. We used a RaspberryPi and Python to program a Roomba robot. In this video, we used a PID controller, along with laser sensor data to have the robot follow along a wall. Other projects in this course included random walk, using the bumpers on the robot, and docking the robot at the charging station. This class taught me a significant amount about the connection between hardware and software, as well as diagnosing problems in code based on issues seen in performance.
+        </p>
+        <h class"page-about">FPGA Programming (Spring 2019)</h>
+        <video src="BKDV2995.mp4" class="video/mp4" controls class="page-video"></video>
+        <p class="page-info">
+            This is a demonstration of a project I worked on for my Embedded Systems course. We setup an FPGA that would run our own C code to use multiple processors, and output video to a monitor in order to do a Mandelbrot Set zoom. This also taught me about connecting hardware and software to a greater degree, as the code was very low level, and we had to actually set up the FPGA ourselves.
+        </p>
         <h class="page-about">This Website (January 2020-)</h>
         <p class="page-info">
             This website was built from scratch using html, CSS, and JavaScript (PHP was used, but is not supported by GitHub Pages)
