--- a/projects.html
+++ b/projects.html
@@ -40,8 +40,8 @@
         <p class="page-info">
             This is a demonstration of a project I worked on for my robotics class. We used a RaspberryPi and Python to program a Roomba robot. In this video, we used a PID controller, along with laser sensor data to have the robot follow along a wall. Other projects in this course included random walk, using the bumpers on the robot, and docking the robot at the charging station. This class taught me a significant amount about the connection between hardware and software, as well as diagnosing problems in code based on issues seen in performance.
         </p>
-        <h class"page-about">FPGA Programming (Spring 2019)</h>
-        <video src="BKDV2995.mp4" class="video/mp4" controls class="page-video"></video>
+        <h class="page-about">FPGA Programming (Spring 2019)</h>
+        <video src="BKDV2995.mp4" type="video/mp4" controls class="page-video"></video>
         <p class="page-info">
             This is a demonstration of a project I worked on for my Embedded Systems course. We setup an FPGA that would run our own C code to use multiple processors, and output video to a monitor in order to do a Mandelbrot Set zoom. This also taught me about connecting hardware and software to a greater degree, as the code was very low level, and we had to actually set up the FPGA ourselves.
         </p>
