Updates for class
Modified bio and mission in index page, split up past and current projects, seperate link to resume PDF

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div id="myMenu" class="menu">
         <a href="javascript:void(0)" class="close-button" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
+        <a href="past_projects.html">Past Projects</a>
+        <a href="current_projects.html">Current Projects</a>
+        <a href="My_Resume1.pdf">Resume</a>
+        <a href="contact.html">Contact</a>
     </div>
     <div id="myOverlay" class="overlay"></div>
     <header id="myHeader">
@@ -32,9 +35,8 @@
         </p>
         <img src="ProfessionalPic.jpg" alt="Pic" class="page-pic">
         <p class="page-info">
-            Welcome to my personal website. Here you can find information about me, links to my resume, as well as demos of my projects. <br> <br>I am always looking to learn, which is why I invested so much time teaching myself new things. making this website, and both projects displayed on it are personal projects I did for enjoyment and the learning experience. This is why I am currently looking for an internship with a tech or engineering company that will build off of what I have learned in college about programming and working in a team, as well as teach me various new applications for my knowledge, and push me to excel professionally.<br><br>
+            Welcome to my personal website. My name is Miles Ziemer and I am a senior in Computer Engineering at the University of South Carolina. Here you can find information about me, links to my resume, as well as demos and information about my projects and experience. My interests include Artificial Intelligance, Robotics, Math and Physics. I am currently a tutor, helping in Computer Science, Math and Physics, and have completed multiple projects spanning a wide range of topics; all here on the website.<br> <br> The potential for artificial intelligence and robotics to revolutionize and advance human society is exciting and motivating for me. The ability to use technology to help the world is why I wish to work in one or both of these fields. In order to accomplish this, I believe it is most important for me currently to have a broad range of knowledge, and a strong ability to problem solve, which is why I consistently expose myself to new concepts in a broad range of topics. Tutoring others helps me accomplish this because I am forced to not only understand a subject, but understand it well enough to make others understand it. Pushing myself to deeply understand a wide range of topics will allow me to apply my knowledge to improving the lives of others through science and technology. This website highlights my passion for learning and growing as an engineer, displaying my current and past projects, as well as other information and experience I have. All of this information can be found in the navigation bar to the left.<br><br>
         </p>
-        <a href="My_Resume1.pdf" class="resume">Resume</a>
     </div>
     <script src="webapp.js" charset="utf-8"></script>
 </body>
