fixed sizes of videos

--- a/past_projects.html
+++ b/past_projects.html
@@ -33,12 +33,14 @@
             This desktop app was created to give patients who have been perscribed narcotic pills an idea of how many pills people with their similar BMI and age took. I originally coded this in Visual Basic, but put it into C#, believing C# would be more of a learning experience, and would prove more useful in the future. This program uses data from lower extremity surgeries performed at the Anne Arundel Medical Center, and was presented to some of the staff, who implemented the idea into the framework they already used to track perscriptions.
         </p>
         <h class="page-about">Roomba Programming (Fall 2019)</h>
-        <video src="IMG_1549.MOV" type="video/MOV" controls class="page-video"></video>
+        <br>
+        <video src="IMG_1549.MOV" type="video/MOV" width=25%></video>
         <p class="page-info">
             This is a demonstration of a project I worked on for my robotics class. We used a RaspberryPi and Python to program a Roomba robot. In this video, we used a PID controller, along with laser sensor data to have the robot follow along a wall. Other projects in this course included random walk, using the bumpers on the robot, and docking the robot at the charging station. One big thing about this project that was difficult but proved priceless, was the intricacy and specificity of robot hardware. We had to access each sensor's data directly, as well as it's interactive components. This led to significant bugs and errors, which can be difficult to diagnose. Fortunately, the Roomba has a very specific design architecture that made it more structured to deal with problems. Exposure to this kind of problem solving was extremely valuable to me.
         </p>
         <h class="page-about">FPGA Programming (Spring 2019)</h>
-        <video src="BKDV2995.mp4" type="video/mp4" controls class="page-video"></video>
+        <br>
+        <video src="BKDV2995.mp4" type="video/mp4" width=25%></video>
         <p class="page-info">
             This is a demonstration of a project I worked on for my Embedded Systems course. We setup an FPGA using software to interface our C code with the components of the FPGA. Specifically, we used the video output of the FPGA, and hooked it up to a monitor, as well as running multiple processors for speed. The C code we wrote iterated and zoomed into the Mandelbrot set. Personally, I enjoyed the mathematical aspect of this project, but mostly was shown the connections between software and hardware that allow complex and/or specific machines to run. Other projects in this course used other aspects of the FPGA board, such as the LED's and 8-bit display. In general, I learned a great deal about how to connect software and hardware, as well as how to design specific hardware to complete a task.
         </p>
